--- a/app/src/main/res/layout/layout_edit_listitem.xml
+++ b/app/src/main/res/layout/layout_edit_listitem.xml
@@ -7,13 +7,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
         android:id="@+id/item_titleText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:gravity="center_vertical"
         android:textSize="14sp"
-        app:layout_constraintDimensionRatio="0.8:1"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,9 +19,10 @@
         android:id="@+id/content_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/item_copyButton"
-        app:layout_constraintStart_toEndOf="@+id/item_titleText"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.cartoonhero.source.enrollment_android.scenery.TextFieldView
@@ -35,6 +34,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/item_contentText"
             android:layout_width="0dp"
