--- a/app/src/main/res/layout/fragment_qrcode.xml
+++ b/app/src/main/res/layout/fragment_qrcode.xml
@@ -20,7 +20,7 @@
         android:layout_marginBottom="64dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:text="Button"
+        android:text="@string/select_qrcode_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
