gitflow-feature-stash: optimized_flow

--- a/app/src/main/res/layout/fragment_unit.xml
+++ b/app/src/main/res/layout/fragment_unit.xml
@@ -61,7 +61,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:text="@string/role_changed"
+        android:text="@string/switch_role"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
