--- a/app/src/main/res/layout/fragment_visitor.xml
+++ b/app/src/main/res/layout/fragment_visitor.xml
@@ -56,7 +56,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-        <ToggleButton
+        <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/toggleButton"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
