--- a/app/src/main/res/layout/layout_edit_listitem.xml
+++ b/app/src/main/res/layout/layout_edit_listitem.xml
@@ -21,7 +21,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/item_copyButton"
+        app:layout_constraintEnd_toStartOf="@+id/item_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -46,7 +46,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/item_copyButton"
+        android:id="@+id/item_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
