--- a/app/src/main/res/layout/fragment_unit.xml
+++ b/app/src/main/res/layout/fragment_unit.xml
@@ -24,7 +24,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ToggleButton
+        <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/toggleButton"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
